--- a/actividades.html
+++ b/actividades.html
@@ -87,6 +87,18 @@
              </nav>
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>                                                                    </div>
     <section>
+      <article>
+        <figure class="grow">
+          <img src="/img/crucigrama.jpg" alt="Crucigrama">
+
+        </figure>
+
+
+
+      </article>
+
+
+
      <!--<h2>Diseño de Sitios Web - UNAD ECBTI</h2>
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <article>
