--- a/actividades.html
+++ b/actividades.html
@@ -89,7 +89,7 @@
     <section>
       <article>
         <figure class="grow">
-          <img src="img/crucigrama.jpg" alt="Crucigrama">
+          <a href=""><img src="img/crucigrama.jpg" alt="Crucigrama"></a>
 
         </figure>
 
