--- a/actividades.html
+++ b/actividades.html
@@ -88,30 +88,19 @@
             <div id="apDiv14"><a href="https://campus0a.unad.edu.co/campus0/login/index.php" target="_blank"><img src="img/campus.png" width="116" height="101"></a>                                                                    </div>
     <section>
       <article>
-        <figure class="grow">
-          <a href=""><img src="img/crucigrama.jpg" alt="Crucigrama"></a>
+        <h2>JUEGOS INTERACTIVOS</h2>
+        <h2 id="idCrucigrama">Crucigrama</h2>
+        <p>Veamos que tanto conoces de seguridad Informática a travès de este 
+          pequeño juego.</p>
+        <figure class="shrink">
+          <a href="CrucigramaSeguridadInformatica.htm" target="_blank"><img id="idCrucigramaImg" src="img/crucigrama.jpg" alt="Crucigrama"></a>
 
         </figure>
 
 
 
       </article>
-
-
-
-     <!--<h2>Diseño de Sitios Web - UNAD ECBTI</h2>
-    <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
-                <article>
-                    <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
-                        </figure>
-                    <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                        • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
-                    </p>
-                        </article>-->
+   
     </section>
     <aside> 
                 <div id="apDiv5">
