--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
               <article>
                     <figure>
-                        <img id="apDiv28" src="img/SeguridadInformatica.jpg" alt="SeguridadInformatica" title="Estructura del curso">
+                        <img id="apDiv28" src="img/SeguridadInformatica.JPG" alt="SeguridadInformatica" title="Estructura del curso">
                   	</figure>
                     <p>
                         Propósitos del curso:<br>
