--- a/actividades.html
+++ b/actividades.html
@@ -39,8 +39,8 @@
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
-                    <li><a href="" class="menu">Submenu 2</li>
+                    <li><a href="" class="menu">Juego 1</li>
+                    <li><a href="" class="menu">Juego 2</li>
                   </ul>
                 </li>
                 <li><a href="autores.html" class="menu">Autores</a>
