--- a/autores.html
+++ b/autores.html
@@ -64,10 +64,11 @@
                 <div id="apDiv4">
                   <a id="l1" target="_blank" rel="nofollow" href="https://www.facebook.com/Universidad-Nacional-Abierta-y-a-Distancia-UNAD-285790428108305/"><img title="Facebook"border="0" src="img/facebook_aqu_32.png" alt="Facebook" />
                   </a>
-                  <a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Twitter" border="0" />
-                  </a>
-                  <span class="nsb_container"><a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src=                    "img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a></span>
-                </div> 
+                  <a href="https://twitter.com/UniversidadUNAD" target="_blank"><img src="img/twitter_aqu_32.png" class="menu" title="Twitter" border="0" /></a>
+                  
+                  
+                  <span class="nsb_container"><a href="https://www.youtube.com/user/universidadunad" target="_blank"><img src="img/youtube.png" alt="YouTube" title="Youtube" border="0" /></a></span>
+                </div>  
               </ul>
                  <div id="apDiv3">    
                    <form method="get" action="http://www.google.es/search">
