cambio de las imagenes

--- a/actividades.html
+++ b/actividades.html
@@ -94,11 +94,6 @@
         <h2 id="idCrucigrama">Crucigrama</h2>
         <p>Veamos que tanto conoces de seguridad Informática a travès de este 
           pequeño juego.</p>
-        <!--<figure class="shrink">
-          <a href="CrucigramaSeguridadInformatica.htm" target="_blank"><img id="idCrucigramaImg" src="img/crucigrama.jpg" alt="Crucigrama"></a>
-
-        </figure>-->
-
       <div id="container">
        <a href="CrucigramaSeguridadInformatica.htm" target="_blank">
        <div id="girando">
@@ -108,10 +103,22 @@
             </figure>
           </span>
         
-          <span id="dos">2</span>
-          <span id="tres">3</span>
-          <span id="cuatro">4</span>
-           <span id="cinco">5</span>
+          <span id="dos">
+            <figure><img class="tamañoIMG" src="img/crucigrama3.jpg" alt="">
+            </figure>
+          </span>
+          <span id="tres">
+            <figure><img class="tamañoIMG" src="img/crucigrama5.jpg" alt="">
+            </figure>
+          </span>
+          <span id="cuatro">
+            <figure><img class="tamañoIMG" src="img/crucigrama7.jpg" alt="">
+            </figure>
+          </span>
+          <span id="cinco">
+            <figure><img class="tamañoIMG" src="img/crucigrama2.jpg" alt="">
+            </figure>
+          </span>
        </div>
        </a>
       </div>
