Cambio colores Crucigrama

--- a/CrucigramaSeguridadInformatica.htm
+++ b/CrucigramaSeguridadInformatica.htm
@@ -38,7 +38,7 @@ Crucigrama
 
 body{
 	font-family: Geneva,Arial,sans-serif;
-	background-color: #ff8000;
+	background-color: #809eee;
 	color: #000000;
  
 	margin-right: 5%;
@@ -60,7 +60,7 @@ table,div,span,td{
 div.Titles{
 	padding: 0.5em;;
 	text-align: center;
-	color: #0000ff;
+	color: #000000;
 }
 
 button{
@@ -71,16 +71,16 @@ button{
 
 .ExerciseTitle{
 	font-size: 140%;
-	color: #0000ff;
+	color: #000000;
 }
 
 .ExerciseSubtitle{
 	font-size: 120%;
-	color: #0000ff;
+	color: #000000;
 }
 
 div.StdDiv{
-	background-color: #ff80ff;
+	background-color: #c1ffe0;
 	text-align: center;
 	font-size: 100%;
 	color: #000000;
@@ -131,7 +131,7 @@ div#Timer{
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
-	color: #0000ff;
+	color: #000000;
 }
 
 span#TimerText{
@@ -140,7 +140,7 @@ span#TimerText{
 	border-style: solid;
 	font-weight: bold;
 	display: none;
-	color: #0000ff;
+	color: #000000;
 }
 
 span.Instructions{
@@ -152,7 +152,7 @@ div.ExerciseText{
 }
 
 .FeedbackText, .FeedbackText span.CorrectAnswer, .FeedbackText span.Guess, .FeedbackText span.Answer{
-	color: #0000ff;
+	color: #000000;
 }
 
 .LeftItem{
@@ -181,7 +181,7 @@ select{
 }
 
 div.Feedback {
-	background-color: #ff8000;
+	background-color: #809eee;
 	left: 33%;
 	width: 34%;
 	top: 33%;
@@ -190,7 +190,7 @@ div.Feedback {
 	border-width: 1px;
 	padding: 5px;
 	text-align: center;
-	color: #0000ff;
+	color: #000000;
 	position: absolute;
 	display: none;
 	font-size: 100%;
@@ -222,7 +222,7 @@ table.FlashcardTable tr{
 	border-style: none;
 	margin: 0px;
 	padding: 0px;
-	background-color: #ff80ff;
+	background-color: #c1ffe0;
 }
 
 table.FlashcardTable td.Showing{
@@ -235,7 +235,7 @@ table.FlashcardTable td.Showing{
 	border-style: solid;
 	border-width: 1px;
 	color: #000000;
-	background-color: #ff80ff;
+	background-color: #c1ffe0;
 }
 
 table.FlashcardTable td.Hidden{
@@ -265,7 +265,7 @@ div.DropLine {
 	text-align: center;
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
-	border-bottom-color: #0000ff;
+	border-bottom-color: #000000;
 	width: 80%;
 }
 
@@ -427,7 +427,7 @@ textarea{
 .PartialAnswer{
 	font-size: 120%;
 	letter-spacing: 0.1em;
-	color: #0000ff;
+	color: #000000;
 }
 
 .Highlight{
@@ -472,12 +472,12 @@ div.ShortAnswer{
 	text-align: center;
 	border-style: solid;
 
-	border-left-color: #ffbfff;
-	border-top-color: #ffbfff;
-	border-right-color: #7f407f;
-	border-bottom-color: #7f407f;
+	border-left-color: #e0ffef;
+	border-top-color: #e0ffef;
+	border-right-color: #607f70;
+	border-bottom-color: #607f70;
 	color: #000000;
-	background-color: #ff80ff;
+	background-color: #c1ffe0;
 
 	border-width: 2px;
 	padding: 3px 6px 3px 6px;
@@ -485,33 +485,33 @@ div.ShortAnswer{
 }
 
 .FuncButtonUp {
-	color: #ff80ff;
+	color: #c1ffe0;
 	text-align: center;
 	border-style: solid;
 
-	border-left-color: #ffbfff;
-	border-top-color: #ffbfff;
-	border-right-color: #7f407f;
-	border-bottom-color: #7f407f;
+	border-left-color: #e0ffef;
+	border-top-color: #e0ffef;
+	border-right-color: #607f70;
+	border-bottom-color: #607f70;
 
 	background-color: #000000;
-	color: #ff80ff;
+	color: #c1ffe0;
 	border-width: 2px;
 	padding: 3px 6px 3px 6px;
 	cursor: pointer;
 }
 
 .FuncButtonDown {
-	color: #ff80ff;
+	color: #c1ffe0;
 	text-align: center;
 	border-style: solid;
 
-	border-left-color: #7f407f;
-	border-top-color: #7f407f;
-	border-right-color: #ffbfff;
-	border-bottom-color: #ffbfff;
+	border-left-color: #607f70;
+	border-top-color: #607f70;
+	border-right-color: #e0ffef;
+	border-bottom-color: #e0ffef;
 	background-color: #000000;
-	color: #ff80ff;
+	color: #c1ffe0;
 
 	border-width: 2px;
 	padding: 3px 6px 3px 6px;
@@ -521,7 +521,7 @@ div.ShortAnswer{
 /*BeginNavBarStyle*/
 
 div.NavButtonBar{
-	background-color: #00ff40;
+	background-color: #6f6f6f;
 	text-align: center;
 	margin: 2px 0px 2px 0px;
 	clear: both;
@@ -531,11 +531,11 @@ div.NavButtonBar{
 .NavButton {
 	border-style: solid;
 	
-	border-left-color: #7fff9f;
-	border-top-color: #7fff9f;
-	border-right-color: #007f20;
-	border-bottom-color: #007f20;
-	background-color: #00ff40;
+	border-left-color: #b7b7b7;
+	border-top-color: #b7b7b7;
+	border-right-color: #373737;
+	border-bottom-color: #373737;
+	background-color: #6f6f6f;
 	color: #ffffff;
 
 	border-width: 2px;
@@ -545,11 +545,11 @@ div.NavButtonBar{
 .NavButtonUp {
 	border-style: solid;
 
-	border-left-color: #7fff9f;
-	border-top-color: #7fff9f;
-	border-right-color: #007f20;
-	border-bottom-color: #007f20;
-	color: #00ff40;
+	border-left-color: #b7b7b7;
+	border-top-color: #b7b7b7;
+	border-right-color: #373737;
+	border-bottom-color: #373737;
+	color: #6f6f6f;
 	background-color: #ffffff;
 
 	border-width: 2px;
@@ -559,11 +559,11 @@ div.NavButtonBar{
 .NavButtonDown {
 	border-style: solid;
 
-	border-left-color: #007f20;
-	border-top-color: #007f20;
-	border-right-color: #7fff9f;
-	border-bottom-color: #7fff9f;
-	color: #00ff40;
+	border-left-color: #373737;
+	border-top-color: #373737;
+	border-right-color: #b7b7b7;
+	border-bottom-color: #b7b7b7;
+	color: #6f6f6f;
 	background-color: #ffffff;
 
 	border-width: 2px;
@@ -592,7 +592,7 @@ div.CardStyle {
 	border-style: solid;
 	border-width: 1px;
 	color: #000000;
-	background-color: #ff80ff;
+	background-color: #c1ffe0;
 	left: -50px;
 	top: -50px;
 	overflow: visible;
@@ -1495,7 +1495,7 @@ function DownTime(){
 </div>
 
 <div id="InstructionsDiv" class="StdDiv">
-	<div id="Instructions">Complete the crossword, then click on "Check" to check your answer. If you are stuck, you can click on "Hint" to get a free letter. Click on a number in the grid to see the clue or clues for that number.</div>
+	<div id="Instructions">Complete the crossword, then click on "Check" to check your answer. If you are stuck, you can click on "Hint" to get a free letter. Click on a number in the grid to see the clue or clues for that number.<br /><br />Completa el crucigrama, entonces da Click en el boton "Check" para revisar la respuesta. Si estas atascado puedes dar click en "Hint" para obtener una pista. Da click en un numero de la grilla para ver la pista o pistas.</div>
 </div>
 
 
