--- a/actividades.html
+++ b/actividades.html
@@ -91,7 +91,7 @@
     <section>
       <article>
         <h2>JUEGOS INTERACTIVOS</h2>
-        <h2 id="idCrucigrama">Crucigrama</h2>
+        <h2 id="Textos">Crucigrama</h2>
         <p>Veamos que tanto conoces de seguridad Informática a travès de este 
           pequeño juego.</p>
       <div id="container">
@@ -118,38 +118,52 @@
           <span id="cinco">
             <figure><img class="tamañoIMG" src="img/crucigrama2.jpg" alt="">
             </figure>
-          </span>
-       </div>
-       </a>
-      </div>
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-79823-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-  <script type="text/javascript">
-  function woopraReady(tracker) {
-      tracker.setDomain('csslab.cl');
-      tracker.setIdleTimeout(300000);
-      tracker.track();
-      return false;
-  }
-  (function() {
-      var wsc = document.createElement('script');
-      wsc.src = document.location.protocol+'//static.woopra.com/js/woopra.js';
-      wsc.type = 'text/javascript';
-      wsc.async = true;
-      var ssc = document.getElementsByTagName('script')[0];
-      ssc.parentNode.insertBefore(wsc, ssc);
-  })();
-  </script>
+            </span>
+           </div>
+          </a>
+          </div>
+      <script type="text/javascript">
+         var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-79823-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+             })();
+        </script>
+        <script type="text/javascript">
+        function woopraReady(tracker) {
+          tracker.setDomain('csslab.cl');
+           tracker.setIdleTimeout(300000);
+            tracker.track();
+         return false;
+         }
+        (function() {
+          var wsc = document.createElement('script');
+          wsc.src = document.location.protocol+'//static.woopra.com/js/woopra.js';
+         wsc.type = 'text/javascript';
+         wsc.async = true;
+         var ssc = document.getElementsByTagName('script')[0];
+          ssc.parentNode.insertBefore(wsc, ssc);
+         })();
+        </script>
 
- </article>
+      </article>
+
+      <article>
+        
+
+
+
+
+
+
+
+
+
+
+      </article>
    
 </section>
     <aside> 
