--- a/actividades.html
+++ b/actividades.html
@@ -91,7 +91,7 @@
     <section>
       <article>
         <h2>JUEGOS INTERACTIVOS</h2>
-        <h2 id="Textos">Crucigrama</h2>
+        <h2 id="idCrucigrama">Crucigrama</h2>
         <p>Veamos que tanto conoces de seguridad Informática a travès de este 
           pequeño juego.</p>
       <div id="container">
@@ -162,7 +162,7 @@
 
 
 
-
+        
       </article>
    
 </section>
