Parte media pagina Actividades

--- a/actividades.html
+++ b/actividades.html
@@ -11,6 +11,7 @@
         <link href='http://fonts.googleapis.com/css?family=arial' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/crucigramStyle.css">
+        <link rel="stylesheet" href="css/QuizStyle.css">
 </head>
 <body>
  <Div id="contenidos">
@@ -91,7 +92,7 @@
     <section>
       <article>
         <h2>JUEGOS INTERACTIVOS</h2>
-        <h2 id="idCrucigrama">Crucigrama</h2>
+        <h2 class="textos">Crucigrama</h2>
         <p>Veamos que tanto conoces de seguridad Informática a travès de este 
           pequeño juego.</p>
       <div id="container">
@@ -152,19 +153,25 @@
       </article>
 
       <article>
-        
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <h2 class="textos">Crucigrama</h2>
+        <p>Ahora veamos como te va en un pequeño quiz</p>
+        <ul class="imagen-3">            
+            <figure>
+              <a href="QuizSeguridadInformatica.htm" target="_blank">
+               <img src="img/quiz1.jpg" alt=""/>
+                <figcaption>
+                <h2>Estas preparado!</h2>
+                <p>Da click a la imagen para empezar</p>
+                </figcaption>
+              </a>
+            </figure>           
+          </ul>  
 
-
-
-
-
-
-
-
-
-        
       </article>
-   
 </section>
     <aside> 
                 <div id="apDiv5">
