Commit Final Actividades
Se coloca los dos tabs juego 1 y 2

--- a/actividades.html
+++ b/actividades.html
@@ -41,8 +41,8 @@
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                   <ul>
-                    <li><a href="" class="menu">Juego 1</li>
-                    <li><a href="" class="menu">Juego 2</li>
+                    <li><a href="CrucigramaSeguridadInformatica.htm" target="_blank" class="menu">Juego 1</li>
+                    <li><a href="QuizSeguridadInformatica.htm" target="_blank" class="menu">Juego 2</li>
                   </ul>
                 </li>
                 <li><a href="autores.html" class="menu">Autores</a>
@@ -157,7 +157,7 @@
         <p></p>
         <p></p>
         <p></p>
-        <h2 class="textos">Crucigrama</h2>
+        <h2 class="textos">Quiz</h2>
         <p>Ahora veamos como te va en un pequeño quiz</p>
         <ul class="imagen-3">            
             <figure>
