Link actividades en todas las paginas

--- a/actividades.html
+++ b/actividades.html
@@ -47,7 +47,7 @@
                 </li>
                 <li><a href="autores.html" class="menu">Autores</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
+                    <li><a href="" class="menu">Acerca de</li>
                   </ul>
                 </li>
                 <div id="apDiv19">
