--- a/autores.html
+++ b/autores.html
@@ -39,26 +39,26 @@
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
-                    <li><a href="" class="menu">Submenu 2</li>
+                    <li><a href="CrucigramaSeguridadInformatica.htm" target="_blank" class="menu">Juego 1</li>
+                    <li><a href="QuizSeguridadInformatica.htm" target="_blank" class="menu">Juego 2</li>
                   </ul>
                 </li>
                 <li><a href="autores.html" class="menu">Autores</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
+                    <li><a href="" class="menu">Acerca de</li>
                   </ul>
                 </li>
                 <div id="apDiv19">
                 <center>
                         <div id="cuentavisitas"></div>
-                                                <script>yu=function(id){return document.getElementById(id);}
-                                                        if(localStorage){
-                                                        if(localStorage['visitas']==undefined){
-                                                        localStorage['visitas']=0;
-                                                        }var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
-                                                        var num=localStorage['visitas'];
-                                                        var mensaje=num + " visitas";
-                                                         yu('cuentavisitas').innerHTML=mensaje;}
+                          <script>yu=function(id){return document.getElementById(id);}
+                          if(localStorage){
+                          if(localStorage['visitas']==undefined){
+                          localStorage['visitas']=0;
+                          }var n=parseInt(localStorage['visitas']);localStorage['visitas']=1+n;
+                            var num=localStorage['visitas'];
+                            var mensaje=num + " visitas";
+                            yu('cuentavisitas').innerHTML=mensaje;}
             </script>
                 </center></div>
                 <div id="apDiv4">
