--- a/multimedia.html
+++ b/multimedia.html
@@ -39,13 +39,13 @@
                 </li>
                 <li><a href="actividades.html" class="menu">Actividades</a>
                   <ul>
-                    <li><a href="" class="menu">Juego 1</li>
-                    <li><a href="" class="menu">Juego 2</li>
+                    <li><a href="CrucigramaSeguridadInformatica.htm" target="_blank" class="menu">Juego 1</li>
+                    <li><a href="QuizSeguridadInformatica.htm" target="_blank" class="menu">Juego 2</li>
                   </ul>
                 </li>
                 <li><a href="autores.html" class="menu">Autores</a>
                   <ul>
-                    <li><a href="" class="menu">Submenu 1</li>
+                    <li><a href="" class="menu">Acerca de</li>
                   </ul>
                 </li>
                 <div id="apDiv19">
