Cambios de estilo

--- a/actividades.html
+++ b/actividades.html
@@ -162,7 +162,7 @@
         <ul class="imagen-3">            
             <figure>
               <a href="QuizSeguridadInformatica.htm" target="_blank">
-               <img src="img/quiz1.jpg" alt=""/>
+               <img src="img/quiz1.jpg" alt="Quiz"/>
                 <figcaption>
                 <h2>Estas preparado!</h2>
                 <p>Da click a la imagen para empezar</p>
