--- a/actividades.html
+++ b/actividades.html
@@ -155,7 +155,7 @@
         <p></p>
         <p></p>
         <h2 class="textos">Quiz</h2>
-        <p>Ahora veamos como te va en un pequeño quiz</p>
+        <p>Ahora veamos como te va en un pequeño quiz.</p>
         <ul class="imagen-3">            
             <figure>
               <a href="QuizSeguridadInformatica.htm" target="_blank">
