Cambio de nombre archivo

--- a/CrucigramaSeguridadInformatica.htm
+++ b/CrucigramaSeguridadInformatica.htm
@@ -38,7 +38,7 @@ Crucigrama
 
 body{
 	font-family: Geneva,Arial,sans-serif;
-	background-color: #809eee;
+	background-color: #006680;
 	color: #000000;
  
 	margin-right: 5%;
@@ -80,7 +80,7 @@ button{
 }
 
 div.StdDiv{
-	background-color: #c1ffe0;
+	background-color: #FFFFFF;
 	text-align: center;
 	font-size: 100%;
 	color: #000000;
@@ -181,7 +181,7 @@ select{
 }
 
 div.Feedback {
-	background-color: #809eee;
+	background-color: #006680;
 	left: 33%;
 	width: 34%;
 	top: 33%;
@@ -222,7 +222,7 @@ table.FlashcardTable tr{
 	border-style: none;
 	margin: 0px;
 	padding: 0px;
-	background-color: #c1ffe0;
+	background-color: #FFFFFF;
 }
 
 table.FlashcardTable td.Showing{
@@ -235,7 +235,7 @@ table.FlashcardTable td.Showing{
 	border-style: solid;
 	border-width: 1px;
 	color: #000000;
-	background-color: #c1ffe0;
+	background-color: #FFFFFF;
 }
 
 table.FlashcardTable td.Hidden{
@@ -472,12 +472,12 @@ div.ShortAnswer{
 	text-align: center;
 	border-style: solid;
 
-	border-left-color: #e0ffef;
-	border-top-color: #e0ffef;
-	border-right-color: #607f70;
-	border-bottom-color: #607f70;
+	border-left-color: #ffffff;
+	border-top-color: #ffffff;
+	border-right-color: #7f7f7f;
+	border-bottom-color: #7f7f7f;
 	color: #000000;
-	background-color: #c1ffe0;
+	background-color: #FFFFFF;
 
 	border-width: 2px;
 	padding: 3px 6px 3px 6px;
@@ -485,33 +485,33 @@ div.ShortAnswer{
 }
 
 .FuncButtonUp {
-	color: #c1ffe0;
+	color: #FFFFFF;
 	text-align: center;
 	border-style: solid;
 
-	border-left-color: #e0ffef;
-	border-top-color: #e0ffef;
-	border-right-color: #607f70;
-	border-bottom-color: #607f70;
+	border-left-color: #ffffff;
+	border-top-color: #ffffff;
+	border-right-color: #7f7f7f;
+	border-bottom-color: #7f7f7f;
 
 	background-color: #000000;
-	color: #c1ffe0;
+	color: #FFFFFF;
 	border-width: 2px;
 	padding: 3px 6px 3px 6px;
 	cursor: pointer;
 }
 
 .FuncButtonDown {
-	color: #c1ffe0;
+	color: #FFFFFF;
 	text-align: center;
 	border-style: solid;
 
-	border-left-color: #607f70;
-	border-top-color: #607f70;
-	border-right-color: #e0ffef;
-	border-bottom-color: #e0ffef;
+	border-left-color: #7f7f7f;
+	border-top-color: #7f7f7f;
+	border-right-color: #ffffff;
+	border-bottom-color: #ffffff;
 	background-color: #000000;
-	color: #c1ffe0;
+	color: #FFFFFF;
 
 	border-width: 2px;
 	padding: 3px 6px 3px 6px;
@@ -521,7 +521,7 @@ div.ShortAnswer{
 /*BeginNavBarStyle*/
 
 div.NavButtonBar{
-	background-color: #6f6f6f;
+	background-color: #003f5e;
 	text-align: center;
 	margin: 2px 0px 2px 0px;
 	clear: both;
@@ -531,11 +531,11 @@ div.NavButtonBar{
 .NavButton {
 	border-style: solid;
 	
-	border-left-color: #b7b7b7;
-	border-top-color: #b7b7b7;
-	border-right-color: #373737;
-	border-bottom-color: #373737;
-	background-color: #6f6f6f;
+	border-left-color: #7f9fae;
+	border-top-color: #7f9fae;
+	border-right-color: #001f2f;
+	border-bottom-color: #001f2f;
+	background-color: #003f5e;
 	color: #ffffff;
 
 	border-width: 2px;
@@ -545,11 +545,11 @@ div.NavButtonBar{
 .NavButtonUp {
 	border-style: solid;
 
-	border-left-color: #b7b7b7;
-	border-top-color: #b7b7b7;
-	border-right-color: #373737;
-	border-bottom-color: #373737;
-	color: #6f6f6f;
+	border-left-color: #7f9fae;
+	border-top-color: #7f9fae;
+	border-right-color: #001f2f;
+	border-bottom-color: #001f2f;
+	color: #003f5e;
 	background-color: #ffffff;
 
 	border-width: 2px;
@@ -559,11 +559,11 @@ div.NavButtonBar{
 .NavButtonDown {
 	border-style: solid;
 
-	border-left-color: #373737;
-	border-top-color: #373737;
-	border-right-color: #b7b7b7;
-	border-bottom-color: #b7b7b7;
-	color: #6f6f6f;
+	border-left-color: #001f2f;
+	border-top-color: #001f2f;
+	border-right-color: #7f9fae;
+	border-bottom-color: #7f9fae;
+	color: #003f5e;
 	background-color: #ffffff;
 
 	border-width: 2px;
@@ -577,7 +577,7 @@ a{
 }
 
 a:visited{
-	color: #0000CC;
+	color: #006680;
 }
 
 a:hover{
@@ -592,7 +592,7 @@ div.CardStyle {
 	border-style: solid;
 	border-width: 1px;
 	color: #000000;
-	background-color: #c1ffe0;
+	background-color: #FFFFFF;
 	left: -50px;
 	top: -50px;
 	overflow: visible;
